Anchor the save bubble to the omnibar whenever it exists.

The obsolete code used to check the fullscreen state which is irrelevant.

Bug: 908009
Change-Id: Ide457470aa4226843d611d043260dfef420087e7
Reviewed-on: https://chromium-review.googlesource.com/c/1349216
Reviewed-by: Maxim Kolosovskiy <kolos@chromium.org>
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#610563}
Former-commit-id: 3ba3e2c06a0c471f9536757f0e03a7cb8ddc53fd